; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_api.c_crypto_exit_ops.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_api.c_crypto_exit_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 (%struct.crypto_tfm*)*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.crypto_type* }
%struct.crypto_type = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_tfm*)* @crypto_exit_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @crypto_exit_ops(%struct.crypto_tfm* %0) #0 {
  %2 = alloca %struct.crypto_tfm*, align 8
  %3 = alloca %struct.crypto_type*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %2, align 8
  %4 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %5 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.crypto_type*, %struct.crypto_type** %7, align 8
  store %struct.crypto_type* %8, %struct.crypto_type** %3, align 8
  %9 = load %struct.crypto_type*, %struct.crypto_type** %3, align 8
  %10 = icmp ne %struct.crypto_type* %9, null
  br i1 %10, label %11, label %22

11:                                               ; preds = %1
  %12 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %13 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %12, i32 0, i32 0
  %14 = load i32 (%struct.crypto_tfm*)*, i32 (%struct.crypto_tfm*)** %13, align 8
  %15 = icmp ne i32 (%struct.crypto_tfm*)* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %18 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %17, i32 0, i32 0
  %19 = load i32 (%struct.crypto_tfm*)*, i32 (%struct.crypto_tfm*)** %18, align 8
  %20 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %21 = call i32 %19(%struct.crypto_tfm* %20)
  br label %22

22:                                               ; preds = %16, %11, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
